@@ -2,8 +2,8 @@ package com.hyerijang.dailypay.budget.service;
 
 import com.hyerijang.dailypay.budget.domain.Budget;
 import com.hyerijang.dailypay.budget.domain.Category;
-import com.hyerijang.dailypay.budget.dto.BudgetDto;
-import com.hyerijang.dailypay.budget.dto.CategoryDto;
+import com.hyerijang.dailypay.budget.dto.BudgetResponse;
+import com.hyerijang.dailypay.budget.dto.CategoryResponse;
 import com.hyerijang.dailypay.budget.dto.CreateBudgetListRequest;
 import com.hyerijang.dailypay.budget.dto.RecommendBudgetRequest;
 import com.hyerijang.dailypay.budget.repository.BudgetRepository;
@@ -16,10 +16,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -32,49 +30,48 @@ public class BudgetService {
     private final BudgetRepository budgetRepository;
     private final UserRepository userRepository;
 
-    public List<CategoryDto> getCategories() {
+    public List<CategoryResponse> getCategories() {
         return Category.toList()
             .stream()
-            .map((c) -> new CategoryDto(c.getCode(), c.getTitle()))
+            .map(category -> new CategoryResponse(category.getCode(), category.getTitle()))
             .toList();
     }
 
     @Transactional
-    public List<BudgetDto> update(CreateBudgetListRequest request,
-        Authentication authentication) {
-        User user = userRepository.findByEmail(authentication.getName()).orElseThrow(
-            () -> new ApiException(ExceptionEnum.NOT_EXIST_USER)
-        );
-
-        List<Budget> budgets = budgetRepository.saveAll(getBudgets(request, user));
-        return BudgetDto.getBudgetDetailList(budgets);
+    public List<BudgetResponse> update(CreateBudgetListRequest request, Long userId) {
+        List<Budget> budgets = budgetRepository.saveAll(getBudgets(request, userId));
+        return BudgetResponse.getBudgetDetailList(budgets);
     }
 
-    /***
-     * DB 에서 {유저id, 년월, 카테고리}가 일치하는 예산들을 조회한다. Budget 조회 과정에서 기존 예산이 없다면 새 예산 생성해서 리스트에 포함한다.
+    /**
+     * DB 에서 {유저id, 년월, 카테고리}가 일치하는 예산들을 조회하고, 요청에 맞게 수정한다.
+     * Budget 조회 과정에서 기존 예산이 없다면 새 예산 생성해서 리스트에 포함한다.
      */
-    private List<Budget> getBudgets(CreateBudgetListRequest request, User user) {
-        List<Budget> budgets = request.getData().stream()
+    private List<Budget> getBudgets(CreateBudgetListRequest createBudgetListRequest, Long userId) {
+        return createBudgetListRequest.getData().stream()
             .map(d ->
                 {
                     //기존 예산 있다면 조회, 없다면 새 예산 생성
-                    Budget budget = findExistUser(user, request.getYearMonth(), d.getCategory())
-                        .orElse(createNewBudget(user, request.getYearMonth(), d.getCategory()));
+                    Budget budget = findExistUser(userId, createBudgetListRequest.getYearMonth(),
+                        d.getCategory())
+                        .orElse(createNewBudget(userId, createBudgetListRequest.getYearMonth(),
+                            d.getCategory()));
                     //업데이트
                     budget.updateBudgetAmount(d.getAmount());
                     return budget;
                 }
             )
-            .collect(Collectors.toList());
-        return budgets;
+            .toList();
     }
 
-    private Optional<Budget> findExistUser(User user, YearMonth yearMonth, Category category) {
-        return budgetRepository.findByUserIdAndYearMonthAndCategory(user.getId(), yearMonth,
+    private Optional<Budget> findExistUser(Long userId, YearMonth yearMonth, Category category) {
+        return budgetRepository.findByUserIdAndYearMonthAndCategory(userId, yearMonth,
             category);
     }
 
-    private static Budget createNewBudget(User user, YearMonth yearMonth, Category category) {
+    private Budget createNewBudget(Long userId, YearMonth yearMonth, Category category) {
+        User user = userRepository.findById(userId)
+            .orElseThrow(() -> new ApiException(ExceptionEnum.NOT_EXIST_USER));
         return Budget.builder()
             .category(category)
             .yearMonth(yearMonth)
@@ -85,7 +82,7 @@ public class BudgetService {
     /***
      * 예산 추천 기능
      */
-    public List<BudgetDto> recommend(RecommendBudgetRequest request) {
+    public List<BudgetResponse> recommend(RecommendBudgetRequest request) {
 
         //1. 카테고리 별  평균 예산 비율 계산
         List<Object[]> result = budgetRepository.getUserBudgetTotalAmountByCategoryOrderBySumDesc();
@@ -98,7 +95,7 @@ public class BudgetService {
             (category, rate) -> log.debug("{} : {} ", category, rate));
 
         //2. 카테고리 별  평균 예산 비율 계산을 바탕으로 결과 생성
-        return BudgetDto.generateBudgetDetails(request.userBudgetTotalAmount(),
+        return BudgetResponse.generateBudgetDetails(request.userBudgetTotalAmount(),
             averageRatioByCategory);
     }
 
@@ -113,7 +110,7 @@ public class BudgetService {
             int ratio = (int) (((Long) r[1] * 100.0) / sumBudgetAmount);
             Category category = (Category) r[0];
             // 비중이 10% 미만인 카테고리는 기타로 포함
-            if (IsOtherRatios(ratio, category)) {
+            if (isOtherRatios(ratio, category)) {
                 continue;
             }
             //전체 중 10% 인 카테고리는 추천 리스트에 포함한다.
@@ -124,7 +121,7 @@ public class BudgetService {
         return ratioByCategory;
     }
 
-    private static boolean IsOtherRatios(int ratio, Category category) {
+    private static boolean isOtherRatios(int ratio, Category category) {
         return category == Category.MISCELLANEOUS || ratio < 10;
     }
 
@@ -134,18 +131,18 @@ public class BudgetService {
      */
     public Long getTotalAmountOfBudgetIn(YearMonth yearMonth, Long userId) {
         return getBudgetListOfAllCategoryListIn(yearMonth, userId).stream()
-            .mapToLong(x -> x.getBudgetAmount())
+            .mapToLong(Budget::getBudgetAmount)
             .sum();
     }
 
     /**
      * 유저의 해당 년월 예산 전부 반환
      */
-    private List<Budget> getBudgetListOfAllCategoryListIn(YearMonth this_month, Long userId)
+    private List<Budget> getBudgetListOfAllCategoryListIn(YearMonth yearMonth, Long userId)
         throws ApiException {
-        List<Budget> budgetList = budgetRepository.findByYearMonthAndUserId(this_month, userId);
+        List<Budget> budgetList = budgetRepository.findByYearMonthAndUserId(yearMonth, userId);
 
-        if (budgetList.size() == 0) {
+        if (budgetList.isEmpty()) {
             throw new ApiException(ExceptionEnum.NO_BUDGET_IN_THE_MONTH);
         }
         return budgetList;
@@ -154,11 +151,13 @@ public class BudgetService {
     /**
      * 유저의 해당 년월 예산 을 DTO로 변환한 뒤 전부 반환
      */
-    public List<BudgetDto> getBudgetDtoListOfAllCategoryListIn(YearMonth this_month, Long userId) {
-        return BudgetDto.getBudgetDetailList(getBudgetListOfAllCategoryListIn(this_month, userId));
+    public List<BudgetResponse> getBudgetDtoListOfAllCategoryListIn(YearMonth yearMonth,
+        Long userId) {
+        return BudgetResponse.getBudgetDetailList(
+            getBudgetListOfAllCategoryListIn(yearMonth, userId));
     }
 
-    public List<BudgetDto> recommend(Long finalTodayExpenseProposal) {
+    public List<BudgetResponse> recommend(Long finalTodayExpenseProposal) {
         return recommend(new RecommendBudgetRequest(finalTodayExpenseProposal));
     }
 }
